Revision history for Perl extension JSAN-Client2

0.20 Thu 24 Sep 2009
    - Updated to Module::Install::DSL
    - Migrating from Class::DBI to ORLite
    - Inline all the generated table code to do non-standard things

0.17 Wed 16 Apr 2008
    - Incremental release to upgrade Module::Install and tests
    - Fixing a dependency bug

0.16 Mon 22 Jan 2007
    - Updating dependencies and copyright

0.15 Mon 22 Jan 2007
    - Add support for per-mirror hashed subdirs in the cache
      (This should ensure we don't accidentally merge
       caches from different dates)

0.14 Sun  1 Oct 2006
    - Ported from HTML::Location to URI::ToDisk
    - Some minor cleanups
    - Updated to Module::Install 0.64

0.13 Sat Jul  1 2006
    - Casey turned on mirror.conf
    - Turned off URI skipping

0.12 Fri Jun 30 2006
    - Cleaning up inpreparation for a new round of releases
    - Upgrading to Module::Install 0.63

0.11 Sun Jan 29 2006
    - Fix to handle a change in the Class::DBI API (grrr)
    - Upgraded to Module::Install 0.55

0.09 Sat Aug 27 2005
    - Got sick of having all the index in one big file
    - Refactored the main bits out into their own files

0.08 Thu Aug 25 2005
    - Added support for build-time dependency traversal instead of install-time traversal
    - Reoranised the way we specify the install type to make things more flexible

0.07 Thu Aug 25 2005
    - Fixing bug in newline localisation which was accidentally adding <br> tags
    - Catch the use of odd params and die appropriately

0.06 Sun Aug 21 2005
    - Completed first working version of JSAN::Client
    - JSAN::Client->new( prefix => $path )->install_library('Display.Swap') works! :)

0.05 Sat Aug 20 2005
    - Added a ton of utlity methods
    - Integrated Algorithm::Dependency
    - Completed dist/release/library dependency functionality

0.04 Fri Aug 19 2005
    - Completed the bulk of JSAN::Index, except for extracting from Zip files