@@ -1,11 +1,11 @@
-#!/usr/bin/perl -w
+#!/usr/bin/perl
 
 # Basic test for JSAN::Index
 
 use strict;
 BEGIN {
-	$|  = 1;
-	$^W = 1;
+    $|  = 1;
+    $^W = 1;
 }
 
 use Test::More;
@@ -16,10 +16,10 @@ use JSAN::Transport;
 use JSAN::Index;
 
 if ( online() ) {
-	plan( tests => 52 );
+    plan( tests => 52 );
 } else {
-	plan( skip_all => "Skipping online tests" );
-	exit(0);
+    plan( skip_all => "Skipping online tests" );
+    exit(0);
 }
 
 
@@ -31,16 +31,16 @@ if ( online() ) {
 
 # Test a known-good author
 SCOPE: {
-	my $adamk = JSAN::Index::Author->retrieve( login => 'adamk' );
-	isa_ok( $adamk,        'JSAN::Index::Author' );
-	is(     $adamk->login, 'adamk',                            'Author->login returns as expected'        );
-	is(     $adamk->name,  'Adam Kennedy',                     'Author->name returns as expected'         );
-	like(   $adamk->doc,   qr{^/},                             'Author->doc returns a root-relative path' );
-	like(   $adamk->email, qr{^[\w.-]+\@[\w-]+(?:\.[\w-]+)*$}, 'Author->email returns an email address'   );
-	like(   $adamk->url,   qr{^http://},                        'Author->url returns a URI'                );
-	my @releases = @{$adamk->releases};
-	ok( scalar(@releases), '->releases works' );
-	isa_ok( $releases[0], 'JSAN::Index::Release');
+    my $adamk = JSAN::Index::Author->retrieve( login => 'adamk' );
+    isa_ok( $adamk,        'JSAN::Index::Author' );
+    is(     $adamk->login, 'adamk',                            'Author->login returns as expected'        );
+    is(     $adamk->name,  'Adam Kennedy',                     'Author->name returns as expected'         );
+    like(   $adamk->doc,   qr{^/},                             'Author->doc returns a root-relative path' );
+    like(   $adamk->email, qr{^[\w.-]+\@[\w-]+(?:\.[\w-]+)*$}, 'Author->email returns an email address'   );
+    like(   $adamk->url,   qr{^http://},                        'Author->url returns a URI'                );
+    my @releases = @{$adamk->releases};
+    ok( scalar(@releases), '->releases works' );
+    isa_ok( $releases[0], 'JSAN::Index::Release');
 }
 
 
@@ -52,16 +52,16 @@ SCOPE: {
 
 # Test a known-good distribution
 SCOPE: {
-	my $swapdist = JSAN::Index::Distribution->retrieve( name => 'Display.Swap' );
-	isa_ok( $swapdist, 'JSAN::Index::Distribution' );
-	is(   $swapdist->name,    'Display.Swap', 'Distribution->name matches expected' );
-	like( $swapdist->doc,     qr{^/},         'Distribution->doc returns a root-relative path' );
-	my @releases = @{$swapdist->releases};
-	ok( scalar(@releases), '->releases works' );
-	isa_ok( $releases[0], 'JSAN::Index::Release');
-	isa_ok( $swapdist->latest_release, 'JSAN::Index::Release'      );
-	# Is extractable
-	can_ok( $swapdist, 'extract_libs', 'extract_tests', 'extract_resource' );
+    my $swapdist = JSAN::Index::Distribution->retrieve( name => 'Display.Swap' );
+    isa_ok( $swapdist, 'JSAN::Index::Distribution' );
+    is(   $swapdist->name,    'Display.Swap', 'Distribution->name matches expected' );
+    like( $swapdist->doc,     qr{^/},         'Distribution->doc returns a root-relative path' );
+    my @releases = @{$swapdist->releases};
+    ok( scalar(@releases), '->releases works' );
+    isa_ok( $releases[0], 'JSAN::Index::Release');
+    isa_ok( $swapdist->latest_release, 'JSAN::Index::Release'      );
+    # Is extractable
+    can_ok( $swapdist, 'extract_libs', 'extract_tests', 'extract_resource' );
 }
 
 
@@ -74,7 +74,7 @@ SCOPE: {
 #####################################################################
 # Find a known release
 my $swaprel = JSAN::Index::Release->retrieve(
-	source => '/dist/a/ad/adamk/Display.Swap-0.01.tar.gz',
+    source => '/dist/a/ad/adamk/Display.Swap-0.01.tar.gz',
 );
 isa_ok( $swaprel,                     'JSAN::Index::Release'      );
 isa_ok( $swaprel->distribution, 'JSAN::Index::Distribution' );
@@ -88,12 +88,12 @@ my $swaprel_file = $swaprel->file_path;
 ok( $swaprel_file, '::Release->file_path returns a value' );
 
 SKIP: {
-	skip( "Don't need to predelete file", 2 ) unless -f $swaprel_file;
-	ok(
-		scalar(remove( \1, $swaprel_file )),
-		"Removing existing release file $swaprel_file",
-	);
-	ok( ! -f $swaprel_file, 'File was removed' );
+    skip( "Don't need to predelete file", 2 ) unless -f $swaprel_file;
+    ok(
+        scalar(remove( \1, $swaprel_file )),
+        "Removing existing release file $swaprel_file",
+    );
+    ok( ! -f $swaprel_file, 'File was removed' );
 }
 is( $swaprel->file_mirrored, '', '::Release->file_mirrored returns false when no file' );
 
@@ -127,12 +127,12 @@ can_ok( $swaprel, 'extract_libs', 'extract_tests', 'extract_resource' );
 # Can we find its dependencies
 is_deeply( scalar($swaprel->requires), {}, '::Release->requires returns an empty hash for known-null deps' );
 is_deeply(
-	[ $swaprel->requires_libraries ], [ ],
-	'::Release->requires_libraries for known no-deps returns null list',
+    [ $swaprel->requires_libraries ], [ ],
+    '::Release->requires_libraries for known no-deps returns null list',
 );
 is_deeply(
-	[ $swaprel->requires_releases  ], [ ],
-	'::Release->requires_releases  for known no-deps returns null list',
+    [ $swaprel->requires_releases  ], [ ],
+    '::Release->requires_releases  for known no-deps returns null list',
 );
 
 
@@ -153,14 +153,14 @@ is( ref($deps), 'HASH', '::Release returns a HASH for known deps release'    );
 ok( defined($deps->{Display}), 'Display.Swap depends on Display as expected' );
 ok( defined($deps->{JSAN}),    'Display.Swap depends on JSAN as expected'    );
 is_deeply(
-	[ $hasdeps->requires_libraries ], [ $display, $jsan ],
-	'::Release->requires_libraries returns as expected for known-deps release',
+    [ $hasdeps->requires_libraries ], [ $display, $jsan ],
+    '::Release->requires_libraries returns as expected for known-deps release',
 );
 
 my @hasdeps_releases = $hasdeps->requires_releases;
 is(
-	scalar(@hasdeps_releases), 2,
-	'::Release->requires_releases returns 2 items for known-deps release',
+    scalar(@hasdeps_releases), 2,
+    '::Release->requires_releases returns 2 items for known-deps release',
 );
 isa_ok( $hasdeps_releases[0], 'JSAN::Index::Release' );
 isa_ok( $hasdeps_releases[1], 'JSAN::Index::Release' );
@@ -183,8 +183,8 @@ ok( $swaplib->version, 'Library->version returns true' );
 like( $swaplib->doc, qr{^/},  'Library->doc returns a root-relative path' );
 
 is_deeply(
-	$swaplib->distribution, $swaplib->release->distribution,
-	'->release->distribution matches ->distribution',
+    $swaplib->distribution, $swaplib->release->distribution,
+    '->release->distribution matches ->distribution',
 );
 
 # Is extractable
