@@ -1,11 +1,11 @@
-#!/usr/bin/perl -w
+#!/usr/bin/perl
 
 # Basic test for JSAN::Index
 
 use strict;
 BEGIN {
-	$|  = 1;
-	$^W = 1;
+    $|  = 1;
+    $^W = 1;
 }
 
 use Test::More;
@@ -14,10 +14,10 @@ use JSAN::Index;
 use LWP::Online 'online';
 
 if ( online() ) {
-	plan( tests => 8 );
+    plan( tests => 8 );
 } else {
-	plan( skip_all => "Skipping online tests" );
-	exit(0);
+    plan( skip_all => "Skipping online tests" );
+    exit(0);
 }
 
 
@@ -31,9 +31,9 @@ if ( online() ) {
 
 # Can we load the release source?
 foreach my $params ( [], [ build => 1 ] ) {
-	my $Source = JSAN::Index::Release::_Source->new( @$params );
-	isa_ok( $Source, 'JSAN::Index::Release::_Source' );
-	ok( $Source->load, 'JSAN::Index::Release::_Source loads ok' );
+    my $Source = JSAN::Index::Release::_Source->new( @$params );
+    isa_ok( $Source, 'JSAN::Index::Release::_Source' );
+    ok( $Source->load, 'JSAN::Index::Release::_Source loads ok' );
 }
 
 # Get an installation Alg:Dep object
