@@ -1,9 +1,11 @@
 Revision history for Perl extension JSAN-Client2
 
 0.20 Thu 24 Sep 2009
-    - Updated to Module::Install::DSL
+    - Updated to Module::Install::DSL 0.91
     - Migrating from Class::DBI to ORLite
     - Inline all the generated table code to do non-standard things
+    - Tabs to spaces (alas)
+    - Cleaning up various stuff for a new public release
 
 0.17 Wed 16 Apr 2008
     - Incremental release to upgrade Module::Install and tests
